--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.12.0",
     "framer-motion": "^10.10.0",
+    "leaflet": "^1.9.3",
     "next": "12.0.10",
     "prisma": "^4.12.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "8.0.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "typescript": "4.5.5"
