--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.12.0",
+    "eslint": "^8.37.0",
     "framer-motion": "^10.10.0",
     "leaflet": "^1.9.3",
     "next": "12.0.10",
