--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@prisma/client": "^4.12.0",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.13.0",
     "eslint": "^8.37.0",
     "framer-motion": "^10.10.0",
     "leaflet": "^1.9.3",
     "next": "12.0.10",
-    "prisma": "^4.12.0",
+    "next-auth": "^4.22.1",
+    "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
