--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.6",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
+    "axios": "^1.3.5",
     "eslint": "^8.37.0",
     "framer-motion": "^10.10.0",
     "leaflet": "^1.9.3",
