--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "eslint": "^8.37.0",
     "framer-motion": "^10.10.0",
     "leaflet": "^1.9.3",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-geosearch": "^3.8.0",
     "next": "12.0.10",
     "next-auth": "^4.22.1",
     "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-search": "^2.0.1",
     "react-markdown": "8.0.0"
   },
   "devDependencies": {
