--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@emotion/styled": "^11.10.6",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
+    "@supabase/supabase-js": "^2.24.0",
     "axios": "^1.3.5",
+    "base64-arraybuffer": "^1.0.2",
     "eslint": "^8.37.0",
+    "formidable": "^2.1.1",
     "framer-motion": "^10.10.0",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
