--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-search": "^2.0.1",
     "react-markdown": "8.0.0"
